   fget, an fset functions and a doc string variable and returns the result of
   locals() with the property idiom that uses @property and @x.setter. Thus
   dropped the support for python versions <= 2.5. This is done to increase the
   PyLint rate. And with its final state, the PyLint rate of Stalker increased
   from around 1 to around 9.

v0.1.1.a9
---------

 * Introduced :class:`~stalker.core.models.Type`. A new class to define
   **types**. With this introduction, all the classes deriving from
   ``TypeEntity`` (and the TypeEntity it self) are removed from Stalker.

 * Added an attribute called ``type`` to the
   :class:`~stalker.core.models.SimpleEntity`. Which will be used to create new
   types to the derived classes.

 * Introduced a new attribute called ``__strictly_typed__`` to all the classes
   (by the means of the EntityMeta), which will force the class to have a
   proper (not None) ``type``.

 * :class:`~stalker.core.models.SimpleEntity` now has its own test module.

 * :class:`~stalker.core.models.TypeTemplate` is renamed to
   :class:`~stalker.core.models.FilenameTemplate` to reflect its duty more
   clearly.

 * fixed the tests for the :mod:`~stalker.db`. Previously each of the tests
   were creating an instance of a specific class then storing it in the
   database, retrieved it back and then comparing the instances, one just
   created and one queried from the database. The problem was that, SA was
   returning the same instance (can be checked with id(instance)) so in any
   case they were equal, it was not possible to compare them and get a
   meaningful difference to see if the database part worked properly. Now, all
   the attributes of the original instance are stored in new variables and
   then the original instance is deleted, and the a new one is retrieved back
   from the database, and all the attributes are compared with the stored ones.
   (probably there are other good ways)
