@@ -262,11 +262,11 @@ class ScheduleMixinDB(object):
 
 
 ########################################################################
-class TaskMixinDB(object):
-    """A helper class for TaskMixin table and mapper setup.
+class ProjectMixinDB(object):
+    """A helper class for ProjectMixin table and mapper setup.
     
     Helps setting up tables and mappers for classes mixed in with
-    :class:`stalker.core.models.TaskMixin`
+    :class:`stalker.core.models.ProjectMixin`
     
     For now there is no exmaple for it, but it is pretty similiar to the other
     mixin classes.
@@ -313,6 +313,72 @@ class TaskMixinDB(object):
             )
         )
         
+        new_properties = {
+            "_project": relationship(
+                Project,
+                primaryjoin=\
+                    class_table.c.project_id==tables.Projects.c.id,
+                post_update=True, # for project itself
+                uselist=False,
+            ),
+            "project": synonym("_project"),
+        }
+        
+        try:
+            mapper_arguments["properties"].update(new_properties)
+        except KeyError:
+            mapper_arguments["properties"] = new_properties
+        
+        return mapper_arguments
+
+
+
+
+
+
+########################################################################
+class TaskMixinDB(object):
+    """A helper class for TaskMixin table and mapper setup.
+    
+    Helps setting up tables and mappers for classes mixed in with
+    :class:`stalker.core.models.TaskMixin`
+    
+    For now there is no exmaple for it, but it is pretty similiar to the other
+    mixin classes.
+    """
+    
+    
+    
+    #----------------------------------------------------------------------
+    @classmethod
+    def setup(cls, class_, class_table, mapper_arguments=None):
+        """Creates the necessary tables and properties for the mappers for the mixed in class.
+        
+        Use the returning dictionary (mapper_arguments) in your mapper.
+        
+        :param class\_: The mixed in class, in other words the class which will
+          be extended with the mixin functionalities
+         
+        :param class_table: The table holding the information about the class
+        
+        :param mapper_arguments: Incoming mapper arugments for the
+          SQLAlchemy.Orm.Mapper, it will be updated with the properties of the
+          current mixin
+        
+        :type mapper_arguments: dict
+        
+        :returns: a dictionary holding the mapper_arguments
+        """
+        
+        if mapper_arguments is None:
+            mapper_arguments = {}
+        
+        class_name = class_.__name__
+        
+        # call the ProjectMixinDB which is kind of the super of this one
+        mapper_arguments = ProjectMixinDB.setup(class_, class_table,
+                                                mapper_arguments)
+        
         # use the given class_name and the class_table
         secondary_table_name = class_name + "_Tasks"
         secondary_table = None
@@ -339,15 +405,6 @@ class TaskMixinDB(object):
             secondary_table = db.metadata.tables[secondary_table_name]
         
         new_properties = {
-            "_project": relationship(
-                Project,
-                primaryjoin=\
-                    class_table.c.project_id==tables.Projects.c.id,
-                post_update=True, # for project itself
-                uselist=False,
-                #remote_side=[tables.Projects.c.id],
-            ),
-            "project": synonym("_project"),
             "_tasks": relationship(
                 Task,
                 secondary=secondary_table,
@@ -367,5 +424,3 @@ class TaskMixinDB(object):
             mapper_arguments["properties"] = new_properties
         
         return mapper_arguments
-
-
